# internal-tools

./: .gitignore  LICENSE  README.md  install.zsh  internal-tools.code-workspace
.windsurf/rules/: fdc-structure.md  general-structure.md  project-structure.md  zsh-utils-structure.md
dbg-tools/fdc/: Makefile  alembic.ini  fdc_database.sqlite  project_summary.md  pyproject.toml
dbg-tools/fdc/.streamlit/: secrets.toml
dbg-tools/fdc/fdc/: __main__.py  app.py  cli.py  data.py
dbg-tools/fdc/fdc/db/: __init__.py  crud.py  models.py  session.py  setup.py
dbg-tools/fdc/fdc/ui/: __init__.py  auto_progress.py  components.py  sidebar.py  stages.py
dbg-tools/fdc/migrations/: env.py
dbg-tools/fdc/migrations/versions/: 95629d8f8184_initial_db.py
fdc/: README.md  pyproject.toml
fdc/fdc/: __init__.py  __main__.py  app.py  cli.py
utils/: docker-utils.zsh  venv-utils.zsh
zsh-utils/: dev-utils.zsh  install.zsh  venv-utils.zsh
